scss/components/_slider.scss
.slider-area {
   position: relative;
   overflow: hidden;
   padding: 120px 0 150px;

   @include tab-screen {
      padding: 70px 0 100px;
   }

   @include mobile-screen {
      text-align: center;
   }

   h3 {
      color: #7FD3FF;
      font-size: 26px;
      @include heavy;

      @include medium-screen {
         margin-bottom: 70px;
      }
   }

   p {
      @include small-text;
      padding-right: 10px;
      

      @include large-screen {
         padding-right: 30px;
      }
   }

   &::after {
      content: '';
      position: absolute;
      background-color: #faf7f2;
      width: 150px;
      height: 150px;
      border-radius: 50%;
      bottom: 0;
      left: -2%;

      @include tab-screen {
         width: 100px;
         height: 100px;
      }
   }


   .benefits {
      display: flex;
      flex-direction: column;
      height: 100%;

      img {
         max-height: 300px;
         height: 100%;

         @include mobile-screen {
            margin: 0 auto;
         }
      }

      .contents {

         margin-top: auto;
      }

      h4 {
         font-size: 31px;
         min-height: 50px;
         margin-bottom: 30px;

         @include tab-screen {
            font-size: 26px;
            margin-top: 30px;
         }
      }
   }
}

.myslider {
   position: relative;

   .owl-dots {
      background-color: $Dodger-Blue;
      border-radius: 20px;
      display: flex;
      position: absolute;
      right: 0;
      top: -100px;
      padding: 5px 10px;

      @include medium-screen {
         top: -80px;
      }

      @include mobile-screen {
         border-radius: 0;
      }

      .owl-dot {
         &.active {

            button {
               background-color: $White;
               color: $Black;
               border-radius: 20px;
               padding: 0 15px;
               box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.8);

               @include mobile-screen {
                  border-radius: 0;
                  padding:3px 7px;
                  font-size: 16px;
                  line-height: 1.3;
               }
            }
         }
      }

      button {
         color: $Dodger-Blue-Light;
         @include small-text;
      }
   }

}

.profit-circle {
   position: relative;

   &::after {
      @include circle(80px, 80px);
      right: 0;
      top: -50px;
   }
}

